Code/Gramatica_i_Tom/output/lingiParser.java
// $ANTLR 3.4 C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g 2012-12-17 22:26:37

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class lingiParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHAR", "COMMENT", "ELSE", "ESC_SEQ", "EXPONENT", "FALSE", "FLOAT", "FOR", "HEX_DIGIT", "ID", "IF", "INT", "OCTAL_ESC", "RETURN", "STRING", "TD_BOOL", "TD_CHAR", "TD_FLOAT", "TD_INT", "TD_STRING", "TD_VOID", "TRUE", "UNICODE_ESC", "WHILE", "WS", "'!'", "'!='", "'%'", "'&&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'/'", "';'", "'<'", "'<='", "'='", "'=='", "'>'", "'>='", "'{'", "'||'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int CHAR=4;
    public static final int COMMENT=5;
    public static final int ELSE=6;
    public static final int ESC_SEQ=7;
    public static final int EXPONENT=8;
    public static final int FALSE=9;
    public static final int FLOAT=10;
    public static final int FOR=11;
    public static final int HEX_DIGIT=12;
    public static final int ID=13;
    public static final int IF=14;
    public static final int INT=15;
    public static final int OCTAL_ESC=16;
    public static final int RETURN=17;
    public static final int STRING=18;
    public static final int TD_BOOL=19;
    public static final int TD_CHAR=20;
    public static final int TD_FLOAT=21;
    public static final int TD_INT=22;
    public static final int TD_STRING=23;
    public static final int TD_VOID=24;
    public static final int TRUE=25;
    public static final int UNICODE_ESC=26;
    public static final int WHILE=27;
    public static final int WS=28;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public lingiParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public lingiParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return lingiParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g"; }



    // $ANTLR start "programa"
    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:4:1: programa : ( funcao )* ;
    public final void programa() throws RecognitionException {
        try {
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:4:9: ( ( funcao )* )
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:4:11: ( funcao )*
            {
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:4:11: ( funcao )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0 >= TD_BOOL && LA1_0 <= TD_VOID)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:4:11: funcao
            	    {
            	    pushFollow(FOLLOW_funcao_in_programa10);
            	    funcao();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "programa"



    // $ANTLR start "funcao"
    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:7:1: funcao : cabecalho '{' ( corpo_funcao )+ '}' ;
    public final void funcao() throws RecognitionException {
        try {
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:7:8: ( cabecalho '{' ( corpo_funcao )+ '}' )
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:7:10: cabecalho '{' ( corpo_funcao )+ '}'
            {
            pushFollow(FOLLOW_cabecalho_in_funcao21);
            cabecalho();

            state._fsp--;


            match(input,47,FOLLOW_47_in_funcao23); 

            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:7:24: ( corpo_funcao )+
            int cnt2=0;
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==FOR||(LA2_0 >= ID && LA2_0 <= IF)||LA2_0==RETURN||(LA2_0 >= TD_BOOL && LA2_0 <= TD_VOID)||LA2_0==WHILE) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:7:24: corpo_funcao
            	    {
            	    pushFollow(FOLLOW_corpo_funcao_in_funcao25);
            	    corpo_funcao();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        throw eee;
                }
                cnt2++;
            } while (true);


            match(input,49,FOLLOW_49_in_funcao28); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "funcao"



    // $ANTLR start "cabecalho"
    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:10:1: cabecalho : tipo ID '(' ( argumentos )? ')' ;
    public final void cabecalho() throws RecognitionException {
        try {
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:11:2: ( tipo ID '(' ( argumentos )? ')' )
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:11:4: tipo ID '(' ( argumentos )? ')'
            {
            pushFollow(FOLLOW_tipo_in_cabecalho39);
            tipo();

            state._fsp--;


            match(input,ID,FOLLOW_ID_in_cabecalho41); 

            match(input,33,FOLLOW_33_in_cabecalho43); 

            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:11:16: ( argumentos )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( ((LA3_0 >= TD_BOOL && LA3_0 <= TD_VOID)) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:11:16: argumentos
                    {
                    pushFollow(FOLLOW_argumentos_in_cabecalho45);
                    argumentos();

                    state._fsp--;


                    }
                    break;

            }


            match(input,34,FOLLOW_34_in_cabecalho48); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "cabecalho"



    // $ANTLR start "argumentos"
    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:14:1: argumentos : declaracao ( ',' declaracao )* ;
    public final void argumentos() throws RecognitionException {
        try {
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:15:2: ( declaracao ( ',' declaracao )* )
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:15:4: declaracao ( ',' declaracao )*
            {
            pushFollow(FOLLOW_declaracao_in_argumentos59);
            declaracao();

            state._fsp--;


            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:15:15: ( ',' declaracao )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==37) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:15:16: ',' declaracao
            	    {
            	    match(input,37,FOLLOW_37_in_argumentos62); 

            	    pushFollow(FOLLOW_declaracao_in_argumentos64);
            	    declaracao();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "argumentos"



    // $ANTLR start "corpo_funcao"
    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:18:1: corpo_funcao : ( declaracoes )? statements ;
    public final void corpo_funcao() throws RecognitionException {
        try {
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:19:2: ( ( declaracoes )? statements )
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:19:4: ( declaracoes )? statements
            {
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:19:4: ( declaracoes )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( ((LA5_0 >= TD_BOOL && LA5_0 <= TD_VOID)) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:19:5: declaracoes
                    {
                    pushFollow(FOLLOW_declaracoes_in_corpo_funcao79);
                    declaracoes();

                    state._fsp--;


                    }
                    break;

            }


            pushFollow(FOLLOW_statements_in_corpo_funcao83);
            statements();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "corpo_funcao"



    // $ANTLR start "declaracoes"
    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:22:1: declaracoes : ( declaracaoExpr )+ ;
    public final void declaracoes() throws RecognitionException {
        try {
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:23:2: ( ( declaracaoExpr )+ )
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:23:4: ( declaracaoExpr )+
            {
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:23:4: ( declaracaoExpr )+
            int cnt6=0;
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( ((LA6_0 >= TD_BOOL && LA6_0 <= TD_VOID)) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:23:4: declaracaoExpr
            	    {
            	    pushFollow(FOLLOW_declaracaoExpr_in_declaracoes94);
            	    declaracaoExpr();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt6 >= 1 ) break loop6;
                        EarlyExitException eee =
                            new EarlyExitException(6, input);
                        throw eee;
                }
                cnt6++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "declaracoes"



    // $ANTLR start "declaracaoExpr"
    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:26:1: declaracaoExpr : declaracao ( '=' expr )? ';' ;
    public final void declaracaoExpr() throws RecognitionException {
        try {
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:27:2: ( declaracao ( '=' expr )? ';' )
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:27:4: declaracao ( '=' expr )? ';'
            {
            pushFollow(FOLLOW_declaracao_in_declaracaoExpr106);
            declaracao();

            state._fsp--;


            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:27:15: ( '=' expr )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==43) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:27:16: '=' expr
                    {
                    match(input,43,FOLLOW_43_in_declaracaoExpr109); 

                    pushFollow(FOLLOW_expr_in_declaracaoExpr111);
                    expr();

                    state._fsp--;


                    }
                    break;

            }


            match(input,40,FOLLOW_40_in_declaracaoExpr115); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "declaracaoExpr"



    // $ANTLR start "declaracao"
    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:30:1: declaracao : tipo ID ;
    public final void declaracao() throws RecognitionException {
        try {
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:31:2: ( tipo ID )
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:31:4: tipo ID
            {
            pushFollow(FOLLOW_tipo_in_declaracao126);
            tipo();

            state._fsp--;


            match(input,ID,FOLLOW_ID_in_declaracao128); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "declaracao"



    // $ANTLR start "statements"
    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:34:1: statements : ( statement )+ ;
    public final void statements() throws RecognitionException {
        try {
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:35:2: ( ( statement )+ )
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:35:4: ( statement )+
            {
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:35:4: ( statement )+
            int cnt8=0;
            loop8:
            do {
                int alt8=2;
                switch ( input.LA(1) ) {
                case ID:
                    {
                    alt8=1;
                    }
                    break;
                case IF:
                    {
                    alt8=1;
                    }
                    break;
                case WHILE:
                    {
                    alt8=1;
                    }
                    break;
                case FOR:
                    {
                    alt8=1;
                    }
                    break;
                case RETURN:
                    {
                    alt8=1;
                    }
                    break;

                }

                switch (alt8) {
            	case 1 :
            	    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:35:4: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_statements139);
            	    statement();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt8 >= 1 ) break loop8;
                        EarlyExitException eee =
                            new EarlyExitException(8, input);
                        throw eee;
                }
                cnt8++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "statements"



    // $ANTLR start "statement"
    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:38:1: statement : ( atribuicao ';' | ifs | whiles | fors | invocacao ';' | retorna ';' );
    public final void statement() throws RecognitionException {
        try {
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:39:2: ( atribuicao ';' | ifs | whiles | fors | invocacao ';' | retorna ';' )
            int alt9=6;
            switch ( input.LA(1) ) {
            case ID:
                {
                int LA9_1 = input.LA(2);

                if ( (LA9_1==43) ) {
                    alt9=1;
                }
                else if ( (LA9_1==33) ) {
                    alt9=5;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 9, 1, input);

                    throw nvae;

                }
                }
                break;
            case IF:
                {
                alt9=2;
                }
                break;
            case WHILE:
                {
                alt9=3;
                }
                break;
            case FOR:
                {
                alt9=4;
                }
                break;
            case RETURN:
                {
                alt9=6;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                throw nvae;

            }

            switch (alt9) {
                case 1 :
                    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:39:4: atribuicao ';'
                    {
                    pushFollow(FOLLOW_atribuicao_in_statement152);
                    atribuicao();

                    state._fsp--;


                    match(input,40,FOLLOW_40_in_statement154); 

                    }
                    break;
                case 2 :
                    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:40:4: ifs
                    {
                    pushFollow(FOLLOW_ifs_in_statement159);
                    ifs();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:41:4: whiles
                    {
                    pushFollow(FOLLOW_whiles_in_statement164);
                    whiles();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:42:4: fors
                    {
                    pushFollow(FOLLOW_fors_in_statement169);
                    fors();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:43:4: invocacao ';'
                    {
                    pushFollow(FOLLOW_invocacao_in_statement174);
                    invocacao();

                    state._fsp--;


                    match(input,40,FOLLOW_40_in_statement176); 

                    }
                    break;
                case 6 :
                    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:44:4: retorna ';'
                    {
                    pushFollow(FOLLOW_retorna_in_statement181);
                    retorna();

                    state._fsp--;


                    match(input,40,FOLLOW_40_in_statement183); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "statement"



    // $ANTLR start "atribuicao"
    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:47:1: atribuicao : ID '=' expr ;
    public final void atribuicao() throws RecognitionException {
        try {
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:48:2: ( ID '=' expr )
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi.g:48:4: ID '=' expr
            {
            match(input,ID,FOLLOW_ID_in_atribuicao194); 

            match(input,43,FOLLOW_43_in_atribuicao196); 

            pushFollow(FOLLOW_expr_in_atribuicao198);
            expr();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "atribuicao"


